--- a/config/botaniatweaks.cfg
+++ b/config/botaniatweaks.cfg
@@ -3,7 +3,7 @@
 ~CONFIG_VERSION: 3
 
 balance {
-    # Should the flint-to-powder alchemy recipe be the same price as the powder-to-flint? This makes it possible to run an Entripinnyum off a cobbleworks. [default: false]
+    # Should the flint-to-powder alchemy recipe be the same price as the powder-to-flint? This makes it possible to run an Entropinnyum off a cobbleworks.
     B:cheapFlintToPowder=true
 
     # How does the Orechid determine its cost and speed to run?
@@ -12,8 +12,11 @@ balance {
     # "force_no_gog": The Orechid will be expensive to run, even in Garden of Glass mode. [default: default]
     S:cheapOrechid=default
 
-    # The default mana output of the Manastorm Charge is multiplied by this amount. Setting this to a value higher than around ~1.38889ish allows for the "Manastorm Reactor" build to be profitable. [range: 1.0 ~ 15.0, default: 8.0]
+    # The default mana output of the Manastorm Charge is multiplied by this amount. Setting this to a value higher than around ~1.38889ish allows for the "Manastorm Reactor" build to be profitable. [range: 1.0 ~ 15.0, default: 1.0]
     S:manastormScaleFactor=8.0
+
+    # A multiplier for the amount of mana that the Rosa Arcana produces when soaking up XP orbs from the world. This doesn't affect the amount of mana obtained from the XP bars of nearby players; only in-world orb entities are affected. [range: 1.0 ~ 8.0, default: 1.0]
+    S:roseArcanaOrbMultiplier=1.0
 
     # Should the Spectrolus generate 8x the mana it does by default? This makes it much cheaper to run; filling a mana pool only requires a little over five stacks of wool, not over a double chest's worth. [default: false]
     B:superSpectrolus=true
