--- a/config/buildcraft/main.cfg
+++ b/config/buildcraft/main.cfg
@@ -61,6 +61,9 @@ general {
 
     # Should BuildCraft miners be allowed to break blocks using player-specific protection?
     B:miningBreaksPlayerProtectedBlocks=false
+
+    # How much power should be required for all mining machines?
+    D:miningMultiplier=1.0
     I:pipes.baseFluidRate=10
     I:pipes.mjPerItem=1000000
     I:pipes.mjPerMillibucket=1000
@@ -73,6 +76,12 @@ general {
 
     # How often, in ticks, should network update packets be sent? Increasing this might help network performance.
     I:updateFactor=10
+}
+
+
+modules {
+    B:forestry=true
+    B:theoneprobe=true
 }
 
 
@@ -145,29 +154,29 @@ worldgen {
         integrateddynamics:biome_meneglin
         nuclearcraft:nuclear_wasteland
         rockhounding_surface:white_sands
-	traverse:autumnal_woods           
-	traverse:woodlands
-	traverse:mini_jungle
-	traverse:meadow
-	traverse:green_swamp
-	traverse:red_desert
-	traverse:temperate_rainforest
-	traverse:badlands
-	traverse:mountainous_desert
-	traverse:rocky_plateau
-	traverse:forested_hills
-	traverse:birch_forested_hills
-	traverse:autumnal_wooded_hills
-	traverse:cliffs
-	traverse:glacier
-	traverse:glacier_spikes
-	traverse:snowy_coniferous_forest
-	traverse:lush_hills
-	traverse:canyon
-	traverse:crag_cliffs
-	traverse:desert_shrubland
-	traverse:thicket
-	traverse:arid_highland
+        traverse:autumnal_woods
+        traverse:woodlands
+        traverse:mini_jungle
+        traverse:meadow
+        traverse:green_swamp
+        traverse:red_desert
+        traverse:temperate_rainforest
+        traverse:badlands
+        traverse:mountainous_desert
+        traverse:rocky_plateau
+        traverse:forested_hills
+        traverse:birch_forested_hills
+        traverse:autumnal_wooded_hills
+        traverse:cliffs
+        traverse:glacier
+        traverse:glacier_spikes
+        traverse:snowy_coniferous_forest
+        traverse:lush_hills
+        traverse:canyon
+        traverse:crag_cliffs
+        traverse:desert_shrubland
+        traverse:thicket
+        traverse:arid_highland
         minecraft:void
         minecraft:mutated_plains
         minecraft:mutated_desert
@@ -190,7 +199,7 @@ worldgen {
         minecraft:mutated_mesa
         minecraft:mutated_mesa_rock
         minecraft:mutated_mesa_clear_rock
-	aether_legacy:aether_highlands
+        aether_legacy:aether_highlands
      >
 
     # Dimension ID's (e.g. '-1' for the nether,'1' for the end) of dimensions that should never generate oil.
