--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -233,6 +233,26 @@ crafting {
     B:com.teamwizardry.refraction.common.block.BlockReflectiveAlloyBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSOre=true
+    B:com.wiresegal.naturalpledge.common.block.BlockStorage=true
+    B:"com.wiresegal.naturalpledge.common.block.ModBlocks$1$1"=true
+    B:"com.wiresegal.naturalpledge.common.block.ModBlocks$3$1"=true
+    B:com.wiresegal.naturalpledge.common.block.alt.BlockAltPlanks=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockAuroraDirt=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockAuroraLog=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockColoredLamp=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockIridescentDirt=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockIridescentPlanks=true
+    B:"com.wiresegal.naturalpledge.common.block.colored.BlockIridescentPlanks$BlockAuroraPlanks"=true
+    B:"com.wiresegal.naturalpledge.common.block.colored.BlockIridescentPlanks$BlockRainbowPlanks"=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockRainbowDirt=true
+    B:com.wiresegal.naturalpledge.common.block.colored.BlockRainbowLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.calico.BlockCalicoLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.calico.BlockCalicoPlanks=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.sealing.BlockAmplifier=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.sealing.BlockSealPlanks=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.sealing.BlockSealingLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderLog=true
+    B:com.wiresegal.naturalpledge.common.block.dendrics.thunder.BlockThunderPlanks=true
     B:com.xcompwiz.mystcraft.block.BlockCrystal=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
     B:dmfmm.catwalks.block.StairBlock=true
@@ -450,6 +470,7 @@ crafting {
     B:quaternary.dazzle.block.BlockDigitalLamp=true
     B:quaternary.dazzle.common.block.BlockAnalogLamp=true
     B:quaternary.dazzle.common.block.BlockDigitalLamp=true
+    B:quaternary.incorporeal.block.BlockCorporeaRetainerDecrementer=true
     B:rustic.common.blocks.BlockBase=true
     B:rustic.common.blocks.BlockClayWallDiag=true
     B:rustic.common.blocks.BlockFertileSoil=true
