--- a/config/factorytech.cfg
+++ b/config/factorytech.cfg
@@ -7,6 +7,9 @@
 ##########################################################################################################
 
 client {
+    # Set to false to disable the Magnifying Glass overlay which may be redundant with WAILA and similar mods. [default: true]
+    B:doOverlay=true
+
     # Set to false to disable machine animations; this will make the mod uglier but may increase your framerate [default: true]
     B:doTESRs=true
 
