--- a/config/immersiverailroading.cfg
+++ b/config/immersiverailroading.cfg
@@ -18,6 +18,9 @@ general {
         # km/h to damage 1 heart on collision
         D:entitySpeedDamage=10.0
 
+        # Enable environmental damage of Boiler Explosions
+        B:explosionEnvDamageEnabled=true
+
         # Enable Boiler Explosions
         B:explosionsEnabled=true
 
@@ -100,6 +103,7 @@ general {
         # dieselfuels
         #--------------------------------------------------------------------------------------------------------#
         # Fuels for diesel Locomotives
+        # Note: Naphtha of Thermal Foundation is internally registered as 'refined oil'.
         ##########################################################################################################
 
         dieselfuels {
@@ -117,6 +121,8 @@ general {
             I:oil_distilled=50
             I:oil_heavy=70
             I:olive_oil=40
+            I:refined_fuel=150
+            I:refined_oil=100
         }
 
     }
