--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -228,6 +228,7 @@ baselining {
     I:"nuclearcraft:fluid_berkelium_248_fluoride_0"=0
     I:"nuclearcraft:fluid_berkelium_248_fluoride_flibe_0"=0
     I:"nuclearcraft:fluid_beryllium_0"=0
+    I:"nuclearcraft:fluid_borax_solution_0"=0
     I:"nuclearcraft:fluid_boric_acid_0"=0
     I:"nuclearcraft:fluid_boron10_0"=0
     I:"nuclearcraft:fluid_boron11_0"=0
@@ -246,6 +247,11 @@ baselining {
     I:"nuclearcraft:fluid_californium_252_0"=0
     I:"nuclearcraft:fluid_californium_252_fluoride_0"=0
     I:"nuclearcraft:fluid_californium_252_fluoride_flibe_0"=0
+    I:"nuclearcraft:fluid_carbon_dioxide_0"=0
+    I:"nuclearcraft:fluid_carbon_monoxide_0"=0
+    I:"nuclearcraft:fluid_chocolate_liquor_0"=0
+    I:"nuclearcraft:fluid_cocoa_butter_0"=0
+    I:"nuclearcraft:fluid_condensate_water_0"=0
     I:"nuclearcraft:fluid_coolant_0"=0
     I:"nuclearcraft:fluid_copper_nak_0"=0
     I:"nuclearcraft:fluid_copper_nak_hot_0"=0
@@ -264,6 +270,7 @@ baselining {
     I:"nuclearcraft:fluid_curium_247_0"=0
     I:"nuclearcraft:fluid_curium_247_fluoride_0"=0
     I:"nuclearcraft:fluid_curium_247_fluoride_flibe_0"=0
+    I:"nuclearcraft:fluid_dark_chocolate_0"=0
     I:"nuclearcraft:fluid_depleted_fuel_hea_242_0"=0
     I:"nuclearcraft:fluid_depleted_fuel_hea_242_fluoride_0"=0
     I:"nuclearcraft:fluid_depleted_fuel_hea_242_fluoride_flibe_0"=0
@@ -349,10 +356,13 @@ baselining {
     I:"nuclearcraft:fluid_emerald_nak_hot_0"=0
     I:"nuclearcraft:fluid_ender_nak_0"=0
     I:"nuclearcraft:fluid_ender_nak_hot_0"=0
+    I:"nuclearcraft:fluid_ethene_0"=0
+    I:"nuclearcraft:fluid_exhaust_steam_0"=0
     I:"nuclearcraft:fluid_ferroboron_0"=0
     I:"nuclearcraft:fluid_flibe_0"=0
     I:"nuclearcraft:fluid_fluorine_0"=0
     I:"nuclearcraft:fluid_fluorite_water_0"=0
+    I:"nuclearcraft:fluid_fluoromethane_0"=0
     I:"nuclearcraft:fluid_fuel_hea_242_0"=0
     I:"nuclearcraft:fluid_fuel_hea_242_fluoride_0"=0
     I:"nuclearcraft:fluid_fuel_hea_242_fluoride_flibe_0"=0
@@ -428,6 +438,7 @@ baselining {
     I:"nuclearcraft:fluid_fuel_tbu_0"=0
     I:"nuclearcraft:fluid_fuel_tbu_fluoride_0"=0
     I:"nuclearcraft:fluid_fuel_tbu_fluoride_flibe_0"=0
+    I:"nuclearcraft:fluid_gelatin_0"=0
     I:"nuclearcraft:fluid_glowstone_nak_0"=0
     I:"nuclearcraft:fluid_glowstone_nak_hot_0"=0
     I:"nuclearcraft:fluid_gold_nak_0"=0
@@ -435,6 +446,8 @@ baselining {
     I:"nuclearcraft:fluid_hard_carbon_0"=0
     I:"nuclearcraft:fluid_helium3_0"=0
     I:"nuclearcraft:fluid_helium_0"=0
+    I:"nuclearcraft:fluid_high_pressure_steam_0"=0
+    I:"nuclearcraft:fluid_hydrated_gelatin_0"=0
     I:"nuclearcraft:fluid_hydrofluoric_acid_0"=0
     I:"nuclearcraft:fluid_hydrogen_0"=0
     I:"nuclearcraft:fluid_iron_nak_0"=0
@@ -450,9 +463,14 @@ baselining {
     I:"nuclearcraft:fluid_lithium6_0"=0
     I:"nuclearcraft:fluid_lithium7_0"=0
     I:"nuclearcraft:fluid_lithium_0"=0
+    I:"nuclearcraft:fluid_low_pressure_steam_0"=0
+    I:"nuclearcraft:fluid_low_quality_steam_0"=0
     I:"nuclearcraft:fluid_magnesium_0"=0
     I:"nuclearcraft:fluid_magnesium_nak_0"=0
     I:"nuclearcraft:fluid_magnesium_nak_hot_0"=0
+    I:"nuclearcraft:fluid_marshmallow_0"=0
+    I:"nuclearcraft:fluid_methanol_0"=0
+    I:"nuclearcraft:fluid_milk_chocolate_0"=0
     I:"nuclearcraft:fluid_nak_0"=0
     I:"nuclearcraft:fluid_nak_hot_0"=0
     I:"nuclearcraft:fluid_naoh_0"=0
@@ -485,6 +503,7 @@ baselining {
     I:"nuclearcraft:fluid_potassium_0"=0
     I:"nuclearcraft:fluid_potassium_fluoride_solution_0"=0
     I:"nuclearcraft:fluid_potassium_hydroxide_solution_0"=0
+    I:"nuclearcraft:fluid_preheated_water_0"=0
     I:"nuclearcraft:fluid_quartz_0"=0
     I:"nuclearcraft:fluid_quartz_nak_0"=0
     I:"nuclearcraft:fluid_quartz_nak_hot_0"=0
@@ -494,6 +513,7 @@ baselining {
     I:"nuclearcraft:fluid_sodium_0"=0
     I:"nuclearcraft:fluid_sodium_fluoride_solution_0"=0
     I:"nuclearcraft:fluid_sodium_hydroxide_solution_0"=0
+    I:"nuclearcraft:fluid_sugar_0"=0
     I:"nuclearcraft:fluid_sulfur_0"=0
     I:"nuclearcraft:fluid_sulfur_dioxide_0"=0
     I:"nuclearcraft:fluid_sulfur_trioxide_0"=0
@@ -511,6 +531,7 @@ baselining {
     I:"nuclearcraft:fluid_tin_nak_hot_0"=0
     I:"nuclearcraft:fluid_tough_0"=0
     I:"nuclearcraft:fluid_tritium_0"=0
+    I:"nuclearcraft:fluid_unsweetened_chocolate_0"=0
     I:"nuclearcraft:fluid_uranium_233_0"=0
     I:"nuclearcraft:fluid_uranium_233_fluoride_0"=0
     I:"nuclearcraft:fluid_uranium_233_fluoride_flibe_0"=0
@@ -589,6 +610,8 @@ baselining {
     I:"thermalfoundation:fluid_petrotheum_0"=0
     I:"thermalfoundation:fluid_pyrotheum_0"=0
     I:"thermalfoundation:fluid_redstone_0"=0
+    I:"tinkersaether:molten_gravitite_0"=0
+    I:"tinkersaether:molten_valkyrie_0"=0
     I:"tinkersaether:tinkersaether.molten_gravitite_0"=0
     I:"tinkersaether:tinkersaether.molten_valkyrie_0"=0
 }
@@ -1243,6 +1266,11 @@ fluids {
     S:fluid.blood.instability.factor_accessibility=
     S:fluid.blood.instability.factor_flat=
     S:fluid.blood.seabanned=
+    S:fluid.borax_solution.cardrank=
+    S:fluid.borax_solution.grammar=
+    S:fluid.borax_solution.instability.factor_accessibility=
+    S:fluid.borax_solution.instability.factor_flat=
+    S:fluid.borax_solution.seabanned=
     S:fluid.boric_acid.cardrank=
     S:fluid.boric_acid.grammar=
     S:fluid.boric_acid.instability.factor_accessibility=
@@ -1333,16 +1361,39 @@ fluids {
     S:fluid.californium_252_fluoride_flibe.instability.factor_accessibility=
     S:fluid.californium_252_fluoride_flibe.instability.factor_flat=
     S:fluid.californium_252_fluoride_flibe.seabanned=
+    S:fluid.carbon_dioxide.cardrank=
+    S:fluid.carbon_dioxide.grammar=
+    S:fluid.carbon_dioxide.instability.factor_accessibility=
+    S:fluid.carbon_dioxide.instability.factor_flat=
+    S:fluid.carbon_monoxide.cardrank=
+    S:fluid.carbon_monoxide.grammar=
+    S:fluid.carbon_monoxide.instability.factor_accessibility=
+    S:fluid.carbon_monoxide.instability.factor_flat=
     S:fluid.casting_bath.cardrank=
     S:fluid.casting_bath.grammar=
     S:fluid.casting_bath.instability.factor_accessibility=
     S:fluid.casting_bath.instability.factor_flat=
     S:fluid.casting_bath.seabanned=
+    S:fluid.chocolate_liquor.cardrank=
+    S:fluid.chocolate_liquor.grammar=
+    S:fluid.chocolate_liquor.instability.factor_accessibility=
+    S:fluid.chocolate_liquor.instability.factor_flat=
+    S:fluid.chocolate_liquor.seabanned=
+    S:fluid.cocoa_butter.cardrank=
+    S:fluid.cocoa_butter.grammar=
+    S:fluid.cocoa_butter.instability.factor_accessibility=
+    S:fluid.cocoa_butter.instability.factor_flat=
+    S:fluid.cocoa_butter.seabanned=
     S:fluid.concrete.cardrank=
     S:fluid.concrete.grammar=
     S:fluid.concrete.instability.factor_accessibility=
     S:fluid.concrete.instability.factor_flat=
     S:fluid.concrete.seabanned=
+    S:fluid.condensate_water.cardrank=
+    S:fluid.condensate_water.grammar=
+    S:fluid.condensate_water.instability.factor_accessibility=
+    S:fluid.condensate_water.instability.factor_flat=
+    S:fluid.condensate_water.seabanned=
     S:fluid.constantan.cardrank=
     S:fluid.constantan.grammar=
     S:fluid.constantan.instability.factor_accessibility=
@@ -1458,6 +1509,11 @@ fluids {
     S:fluid.curium_247_fluoride_flibe.instability.factor_accessibility=
     S:fluid.curium_247_fluoride_flibe.instability.factor_flat=
     S:fluid.curium_247_fluoride_flibe.seabanned=
+    S:fluid.dark_chocolate.cardrank=
+    S:fluid.dark_chocolate.grammar=
+    S:fluid.dark_chocolate.instability.factor_accessibility=
+    S:fluid.dark_chocolate.instability.factor_flat=
+    S:fluid.dark_chocolate.seabanned=
     S:fluid.depleted_fuel_hea_242.cardrank=
     S:fluid.depleted_fuel_hea_242.grammar=
     S:fluid.depleted_fuel_hea_242.instability.factor_accessibility=
@@ -1911,6 +1967,14 @@ fluids {
     S:fluid.ethanol.instability.factor_accessibility=
     S:fluid.ethanol.instability.factor_flat=
     S:fluid.ethanol.seabanned=
+    S:fluid.ethene.cardrank=
+    S:fluid.ethene.grammar=
+    S:fluid.ethene.instability.factor_accessibility=
+    S:fluid.ethene.instability.factor_flat=
+    S:fluid.exhaust_steam.cardrank=
+    S:fluid.exhaust_steam.grammar=
+    S:fluid.exhaust_steam.instability.factor_accessibility=
+    S:fluid.exhaust_steam.instability.factor_flat=
     S:fluid.ferroboron.cardrank=
     S:fluid.ferroboron.grammar=
     S:fluid.ferroboron.instability.factor_accessibility=
@@ -1940,6 +2004,10 @@ fluids {
     S:fluid.fluorite_water.instability.factor_accessibility=
     S:fluid.fluorite_water.instability.factor_flat=
     S:fluid.fluorite_water.seabanned=
+    S:fluid.fluoromethane.cardrank=
+    S:fluid.fluoromethane.grammar=
+    S:fluid.fluoromethane.instability.factor_accessibility=
+    S:fluid.fluoromethane.instability.factor_flat=
     S:fluid.for.honey.cardrank=
     S:fluid.for.honey.grammar=
     S:fluid.for.honey.instability.factor_accessibility=
@@ -2354,6 +2422,11 @@ fluids {
     S:fluid.gasoline.instability.factor_accessibility=
     S:fluid.gasoline.instability.factor_flat=
     S:fluid.gasoline.seabanned=
+    S:fluid.gelatin.cardrank=
+    S:fluid.gelatin.grammar=
+    S:fluid.gelatin.instability.factor_accessibility=
+    S:fluid.gelatin.instability.factor_flat=
+    S:fluid.gelatin.seabanned=
     S:fluid.gendustry.liquiddna.cardrank=
     S:fluid.gendustry.liquiddna.grammar=
     S:fluid.gendustry.liquiddna.instability.factor_accessibility=
@@ -2506,6 +2579,10 @@ fluids {
     S:fluid.helium3.grammar=
     S:fluid.helium3.instability.factor_accessibility=
     S:fluid.helium3.instability.factor_flat=
+    S:fluid.high_pressure_steam.cardrank=
+    S:fluid.high_pressure_steam.grammar=
+    S:fluid.high_pressure_steam.instability.factor_accessibility=
+    S:fluid.high_pressure_steam.instability.factor_flat=
     S:fluid.honey.cardrank=
     S:fluid.honey.grammar=
     S:fluid.honey.instability.factor_accessibility=
@@ -2516,6 +2593,11 @@ fluids {
     S:fluid.hot_spring_water.instability.factor_accessibility=
     S:fluid.hot_spring_water.instability.factor_flat=
     S:fluid.hot_spring_water.seabanned=
+    S:fluid.hydrated_gelatin.cardrank=
+    S:fluid.hydrated_gelatin.grammar=
+    S:fluid.hydrated_gelatin.instability.factor_accessibility=
+    S:fluid.hydrated_gelatin.instability.factor_flat=
+    S:fluid.hydrated_gelatin.seabanned=
     S:fluid.hydrofluoric_acid.cardrank=
     S:fluid.hydrofluoric_acid.grammar=
     S:fluid.hydrofluoric_acid.instability.factor_accessibility=
@@ -2630,6 +2712,14 @@ fluids {
     S:fluid.lithium7.instability.factor_accessibility=
     S:fluid.lithium7.instability.factor_flat=
     S:fluid.lithium7.seabanned=
+    S:fluid.low_pressure_steam.cardrank=
+    S:fluid.low_pressure_steam.grammar=
+    S:fluid.low_pressure_steam.instability.factor_accessibility=
+    S:fluid.low_pressure_steam.instability.factor_flat=
+    S:fluid.low_quality_steam.cardrank=
+    S:fluid.low_quality_steam.grammar=
+    S:fluid.low_quality_steam.instability.factor_accessibility=
+    S:fluid.low_quality_steam.instability.factor_flat=
     S:fluid.lpg.cardrank=
     S:fluid.lpg.grammar=
     S:fluid.lpg.instability.factor_accessibility=
@@ -2665,11 +2755,26 @@ fluids {
     S:fluid.mana.instability.factor_accessibility=
     S:fluid.mana.instability.factor_flat=
     S:fluid.mana.seabanned=
+    S:fluid.marshmallow.cardrank=
+    S:fluid.marshmallow.grammar=
+    S:fluid.marshmallow.instability.factor_accessibility=
+    S:fluid.marshmallow.instability.factor_flat=
+    S:fluid.marshmallow.seabanned=
+    S:fluid.methanol.cardrank=
+    S:fluid.methanol.grammar=
+    S:fluid.methanol.instability.factor_accessibility=
+    S:fluid.methanol.instability.factor_flat=
+    S:fluid.methanol.seabanned=
     S:fluid.milk.cardrank=
     S:fluid.milk.grammar=
     S:fluid.milk.instability.factor_accessibility=
     S:fluid.milk.instability.factor_flat=
     S:fluid.milk.seabanned=
+    S:fluid.milk_chocolate.cardrank=
+    S:fluid.milk_chocolate.grammar=
+    S:fluid.milk_chocolate.instability.factor_accessibility=
+    S:fluid.milk_chocolate.instability.factor_flat=
+    S:fluid.milk_chocolate.seabanned=
     S:fluid.monster_essence.cardrank=
     S:fluid.monster_essence.grammar=
     S:fluid.monster_essence.instability.factor_accessibility=
@@ -2952,6 +3057,11 @@ fluids {
     S:fluid.potassium_hydroxide_solution.instability.factor_accessibility=
     S:fluid.potassium_hydroxide_solution.instability.factor_flat=
     S:fluid.potassium_hydroxide_solution.seabanned=
+    S:fluid.preheated_water.cardrank=
+    S:fluid.preheated_water.grammar=
+    S:fluid.preheated_water.instability.factor_accessibility=
+    S:fluid.preheated_water.instability.factor_flat=
+    S:fluid.preheated_water.seabanned=
     S:fluid.pyrotheum.cardrank=
     S:fluid.pyrotheum.grammar=
     S:fluid.pyrotheum.instability.factor_accessibility=
@@ -3036,6 +3146,11 @@ fluids {
     S:fluid.steam.grammar=
     S:fluid.steam.instability.factor_accessibility=
     S:fluid.steam.instability.factor_flat=
+    S:fluid.sugar.cardrank=
+    S:fluid.sugar.grammar=
+    S:fluid.sugar.instability.factor_accessibility=
+    S:fluid.sugar.instability.factor_flat=
+    S:fluid.sugar.seabanned=
     S:fluid.sulfur.cardrank=
     S:fluid.sulfur.grammar=
     S:fluid.sulfur.instability.factor_accessibility=
@@ -3258,6 +3373,11 @@ fluids {
     S:fluid.unrefined_molten_iron.instability.factor_accessibility=
     S:fluid.unrefined_molten_iron.instability.factor_flat=
     S:fluid.unrefined_molten_iron.seabanned=
+    S:fluid.unsweetened_chocolate.cardrank=
+    S:fluid.unsweetened_chocolate.grammar=
+    S:fluid.unsweetened_chocolate.instability.factor_accessibility=
+    S:fluid.unsweetened_chocolate.instability.factor_flat=
+    S:fluid.unsweetened_chocolate.seabanned=
     S:fluid.uranium.cardrank=
     S:fluid.uranium.grammar=
     S:fluid.uranium.instability.factor_accessibility=
