--- a/config/oreveins.cfg
+++ b/config/oreveins.cfg
@@ -1,7 +1,10 @@
 # Configuration file
 
 general {
-    # If you notice that your veins (especially large ones) are being cut off at chunk boundaries, then try increacing this value. Warning: it will have an impact on world generation performance, so don't go overboard.
+    # Enables debug commands /clearworld, /veininfo and /findveins
+    B:DEBUG_COMMANDS=true
+
+    # If you notice that your veins (especially large ones) are being cut off at chunk boundaries, then try increasing this value. Warning: it will have an impact on world generation performance, so don't go overboard.
     # Min: 0
     # Max: 10
     I:EXTRA_CHUNK_SEARCH_RANGE=0
@@ -10,7 +13,7 @@ general {
     B:NO_ORES=false
 
     # Specific ore types to stop. Only used if NO_ORES is false. Allowed values:
-    # ANDESITE, DIORITE, COAL, CUSTOM, DIAMOND, DIRT, EMERALD, GOLD, GRANITE, GRAVEL, IRON, LAPIS, QUARTZ, REDSTONE, SILVERFISH, 
+    # ANDESITE, DIORITE, COAL, CUSTOM, DIAMOND, DIRT, EMERALD, GOLD, GRANITE, GRAVEL, IRON, LAPIS, QUARTZ, REDSTONE, SILVERFISH
     S:STOPPED_ORES <
         COAL
         DIAMOND
