--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -418,8 +418,10 @@ client {
 
     "better vanilla textures" {
         B:"Enable Andesite"=true
+        B:"Enable Beetroot Seeds"=true
         B:"Enable Bow Animation"=true
         B:"Enable Bricks"=true
+        B:"Enable Dead Bush"=true
         B:"Enable Diorite"=true
         B:"Enable Glass"=true
         B:"Enable Granite"=true
@@ -762,6 +764,8 @@ management {
     }
 
     "inventory sorting" {
+        B:"Enable Button in Player Inventory"=true
+
         # This feature disables itself if any of the following mods are loaded: 
         #  - inventorytweaks
         #  - inventorysorter
@@ -2122,6 +2126,8 @@ world {
     "generate clay underground like dirt" {
         I:"Cluster count"=3
         I:"Cluster size"=20
+        I:"Max Height"=60
+        I:"Min Height"=20
     }
 
     biotite {
