--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -7,6 +7,10 @@
 ##########################################################################################################
 
 animals {
+    # The chance that a bat drops a piece of Leather when killed.
+    # Default: 0.8
+    D:batLeatherDropChance=0.8
+
     # Whether colored sheep should spawn.
     # Default: true
     B:coloredSheep=true
@@ -138,14 +142,6 @@ client {
     # Default: false
     B:disableWitherSpawnSound=false
 
-    # Moves the Bucket to the Tools creative tab.
-    # Default: true
-    B:moveBucketCreativeTab=true
-
-    # Moves spawn eggs to their own creative tab.
-    # Default: true
-    B:spawnEggsCreativeTab=true
-
     # Whether to start the game on the Multiplayer screen.
     # Default: false
     B:startOnMultiplayerScreen=false
@@ -157,6 +153,10 @@ client {
     # Whether stepup is enabled by default.
     # Default: false
     B:stepupEnabledByDefault=false
+
+    # Whether the toggle states for the time of day overlay, stepup and FoV changes should be stored in local/client instead of config/randomtweaks.
+    # Default: true
+    B:storeDataInLocal=true
 
     ##########################################################################################################
     # autothirdperson
@@ -308,6 +308,30 @@ client {
         I:y=0
     }
 
+    ##########################################################################################################
+    # creativetabs
+    #--------------------------------------------------------------------------------------------------------#
+    # Options related to creative tabs.
+    ##########################################################################################################
+
+    creativetabs {
+        # Moves the Bucket to the Tools creative tab.
+        # Default: true
+        B:moveBucketCreativeTab=true
+
+        # Adds the Command Blocks to the Redstone creative tab.
+        # Default: true
+        B:setCommandBlockCreativeTab=true
+
+        # Adds the Dragon Egg to the Decorations creative tab.
+        # Default: true
+        B:setDragonEggCreativeTab=true
+
+        # Moves spawn eggs to their own creative tab.
+        # Default: true
+        B:spawnEggsCreativeTab=true
+    }
+
 }
 
 
@@ -359,9 +383,15 @@ hunger {
     # Default: false
     B:carryExcessHungerToSaturation=false
 
-    # Halves exhaustion values.
-    # Default: false
-    B:halveExhaustion=false
+    # Whether hunger tweaks should be enabled.
+    # Default: true
+    B:enabled=true
+
+    # The hunger exhaustion multiplier.
+    # Min: 0.0
+    # Max: 1.7976931348623157E308
+    # Default: 1.0
+    D:exhaustionMultiplier=1.0
 
     # The maximum hunger level.
     # Min: 1
@@ -404,6 +434,10 @@ misc {
     # Default: 4.0
     D:attackSpeed=4.0
 
+    # Changes the names of the stone and wooden buttons so that their type is in them.
+    # Default: false
+    B:betterButtonNames=false
+
     # Sets when death punishments are enabled in which all XP and 3 hunger points are removed. This is always disabled in creative mode and overrides hunger.respawnResetBehavior.
     # Valid values:
     # ENABLED
@@ -420,6 +454,10 @@ misc {
     # Default: disableNetherPortalCreation
     S:disableNetherPortalCreationGameruleName=disableNetherPortalCreation
 
+    # Whether living entities should drop name tags if they have a custom name.
+    # Default: false
+    B:entitiesDropNameTags=false
+
     # The farmland trample behavior. This only works on Forge 1.12.2-14.23.4.2718 and above.
     # Valid values:
     # VANILLA
@@ -435,10 +473,6 @@ misc {
     # Allows skeleton arrows to be picked up.
     # Default: false
     B:pickUpSkeletonArrows=false
-
-    # Disables mob spawning on non-full cubes.
-    # Default: false
-    B:requireFullCubeForSpawns=false
 
     # Allows players to sleep near mobs with custom names.
     # Default: true
@@ -488,8 +522,8 @@ world {
     # Default: true
     B:realisticWorldType=true
 
-    # The rarity of non-empty chunks in a Void Islands world. If n, there is a 1 in n chance of a chunk being non-empty.
-    # Min: 2
+    # The rarity of non-empty chunks in a Void Islands world. If n, there is a 1 in n chance of a chunk being non-empty. If this is set to 1, only the spawn chunk is generated.
+    # Min: 1
     # Max: 2147483647
     # Default: 10
     I:voidIslandsChunkRarity=10
