--- a/config/theoneprobe.cfg
+++ b/config/theoneprobe.cfg
@@ -105,7 +105,7 @@ providers {
     S:excludedProviders <
      >
 
-    # Order in which entity providers should be used [default: [theoneprobe:entity.default], [theoneprobe:entity.debug], [theoneprobe:entity.entity], [danknull:default], [pneumaticcraft:entity]]
+    # Order in which entity providers should be used [default: [theoneprobe:entity.default], [theoneprobe:entity.debug], [theoneprobe:entity.entity], [danknull:default], [pneumaticcraft:entity], [topaddons:base], [topaddons:binnie's mods], [topaddons:forestry], [topaddons:opencomputers], [topaddons:stevescarts], [topaddons:storagedrawers], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic]]
     S:sortedEntityProviders <
         theoneprobe:entity.default
         theoneprobe:entity.debug
@@ -114,7 +114,7 @@ providers {
         pneumaticcraft:entity
      >
 
-    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [tconstruct:casting], [tconstruct:progress], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [compactmachines3:default], [danknull:default], [mcjtylib:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [pneumaticcraft:default], [rockhounding_rocks:cutting_station], [rockhounding_surface:incubator], [modtut:default], [modularrouters:default], [shetiphian.core], [simplefluidtanks:TankInfoProvider], [waystones]]
+    # Order in which providers should be used [default: [theoneprobe:default], [theoneprobe:debug], [theoneprobe:block], [tconstruct:casting], [tconstruct:progress], [immersiveengineering:EnergyInfo], [immersiveengineering:ProcessInfo], [immersiveengineering:TeslaCoilInfo], [immersiveengineering:SideConfigInfo], [immersiveengineering:FluidInfo], [appliedenergistics2:TileInfoProvider], [appliedenergistics2:PartInfoProvider], [buildcraftcompat.top], [danknull:default], [mcjtylib:default], [integrateddynamics:partData], [integrateddynamics:proxyData], [integrateddynamics:dryingBasinData], [integrateddynamics:squeezerData], [pneumaticcraft:default], [rockhounding_surface:incubator], [topaddons:base], [topaddons:binnie's mods], [topaddons:forestry], [topaddons:opencomputers], [topaddons:stevescarts], [topaddons:storagedrawers], [topaddons:tconstruct], [topaddons:vanilla], [topaddons:rustic], [modtut:default], [mekanism], [omlib:default], [shetiphian.core], [waystones]]
     S:sortedProviders <
         theoneprobe:default
         theoneprobe:debug
@@ -157,6 +157,10 @@ theoneprobe {
     # If true equal stacks will be compacted in the chest contents overlay [default: true]
     B:compactEqualStacks=true
 
+    # A list of blocks for which we don't send NBT over the network. This is mostly useful for blocks that have HUGE NBT in their pickblock (itemstack) [default: ]
+    S:dontSendNBT <
+     >
+
     # A list of blocks for which we don't show chest contents automatically except if sneaking [default: ]
     S:dontShowContentsUnlessSneaking <
      >
@@ -166,6 +170,8 @@ theoneprobe {
 
     # How much time (ms) to wait before reporting an exception again [range: 1 ~ 10000000, default: 20000]
     I:loggingThrowableTimeout=20000
+
+    # Is the probe needed to show the tooltip? 0 = no, 1 = yes, 2 = yes and clients cannot override, 3 = probe needed for extended info only [range: 0 ~ 3, default: 3]
     I:needsProbe=0
 
     # Distance at which the probe works [range: 0.1 ~ 200.0, default: 6.0]
