--- a/config/BuildingGadgets.cfg
+++ b/config/BuildingGadgets.cfg
@@ -1,17 +1,43 @@
 # Configuration file
 
 ##########################################################################################################
+# blockblacklist
+#--------------------------------------------------------------------------------------------------------#
+# Blacklist configuration
+##########################################################################################################
+
+blockblacklist {
+    S:Blacklist <
+        minecraft:wooden_door
+        minecraft:birch_door
+        minecraft:acacia_door
+        minecraft:dark_oak_door
+        minecraft:iron_door
+        minecraft:jungle_door
+        minecraft:spruce_door
+        minecraft:piston_head
+     >
+}
+
+
+##########################################################################################################
 # general
 #--------------------------------------------------------------------------------------------------------#
 # General configuration
 ##########################################################################################################
 
 general {
+    # Determines if the Copy/Paste GUI's coordinate mode starts in 'Absolute' mode by default. Set to true for Absolute, set to False for Relative. [default: false]
+    B:absoluteCoordinateModeDefault=false
+
     # The max durability of the Builder (Ignored if powered by FE) [range: 0 ~ 100000, default: 500]
     I:durabilityBuilder=500
 
     # The max durability of the Exchanger (Ignored if powered by FE) [range: 0 ~ 100000, default: 500]
     I:durabilityExchanger=500
+
+    # Set to false to disable the recipe for construction paste. [default: true]
+    B:enablePaste=true
 
     # The energy cost of the Builder per block [range: 0 ~ 100000, default: 50]
     I:energyCostBuilder=50
