--- a/config/openblocks.cfg
+++ b/config/openblocks.cfg
@@ -94,6 +94,18 @@ crane {
     # Enable collision checking of crane arm
     B:doCraneCollisionCheck=false
 
+    # List of resource location names of blocks that can be picked by magnet
+    S:magnetBlockWhitelist <
+     >
+
+    # List of resource location names of entities that can be picked by magnet
+    S:magnetEntityWhitelist <
+     >
+
+    # List of resource location names of tile entities that can be picked by magnet
+    S:magnetTileEntityWhitelist <
+     >
+
     # Show magnet turtles in creative list
     B:showTurtles=true
 
@@ -130,7 +142,7 @@ devnull {
 
 
 dropblock {
-    # Should elevator move player to center of block after teleporting
+    # Should elevator move player to center of block after teleporting	
     B:centerOnBlock=false
 
     # XP consumed by elevator (total amount = ratio * distance)
@@ -180,6 +192,11 @@ fan {
 
 
 features {
+    # Other fluids accepted instead liquid XP
+    S:additionalXpFluids <
+        "experience:20"
+     >
+
     # Explosive enchant can break blocks at level 3
     B:explosiveEnchantGrief=true
 
@@ -209,6 +226,12 @@ glasses {
 
     # Use texture for obscuring world
     B:useTexture=true
+}
+
+
+glyphs {
+    # Should glyphs be added to creative search GUI
+    B:showInCreativeSearch=false
 }
 
 
@@ -295,6 +318,7 @@ items {
     B:epic_eraser=true
     B:generic=true
     B:generic_unstackable=true
+    B:glyph=true
     B:golden_eye=true
     B:hang_glider=true
     B:height_map=true
@@ -376,7 +400,7 @@ skyblock {
     # Forces skyblock rendering even when Optifine is enabled (warning: skyblocks may be incompatible with shaders!)
     B:optifineOverride=false
 
-    # Enables skyblock rendering. Disable when there are graphic glitches or performance problems
+    # Enables skyblock rendering. Disable when there are graphic glitches or performance problems. Requires resource reload after change.
     B:renderingEnabled=true
 }
 
@@ -484,3 +508,5 @@ xpbucket {
     # Should liquid XP be registered for universal bucket support (does not enable universal bucket)
     B:universalBucketSupport=true
 }
+
+
