--- a/config/tinkersaether.cfg
+++ b/config/tinkersaether.cfg
@@ -11,12 +11,23 @@ general {
     B:aercloudGold=true
 
     # Whether Candy Cane is enabled or not.
+    B:candyCane=true
     B:candycane=true
+
+    # Whether Crystal Leaf is enabled or not.
+    B:crystalLeaf=true
 
     # Whether Darts and Dart Shooters are enabled or not.
     B:darts=true
 
     # Whether Golden Amber is enabled or not.
+    B:goldenAmber=true
+
+    # Whether Golden Feather is enabled or not.
+    B:goldenFeather=true
+
+    # Whether Golden Oak Leaf is enabled or not.
+    B:goldenOakLeaf=true
     B:goldenamber=true
 
     # Whether Gravitite is enabled or not.
@@ -25,11 +36,23 @@ general {
     # Whether Gravitite can be used to make a tool forge.
     B:gravititeForge=true
 
+    # Whether Gravitite Ore can be melted in the smeltery.
+    B:gravititeOreMelt=true
+
+    # Whether Holiday Leaf is enabled or not.
+    B:holidayLeaf=true
+
     # Whether Holystone is enabled or not.
     B:holystone=true
 
+    # Whether Icestone is enabled or not.
+    B:icestone=true
+
     # Whether Skyroot is enabled or not.
     B:skyroot=true
+
+    # Whether Skyroot Leaf is enabled or not.
+    B:skyrootLeaf=true
 
     # Whether Swet is enabled or not.
     B:swet=true
