--- a/config/unidict/IntegrationModule.cfg
+++ b/config/unidict/IntegrationModule.cfg
@@ -6,6 +6,7 @@ integrations {
     B:AppliedEnergistics2=true
     B:BaseMetals=true
     B:BloodMagic=true
+    B:Chickens=true
     B:Crafting=true
     B:DraconicEvolution=true
     B:Embers=true
@@ -13,11 +14,13 @@ integrations {
     B:ExtremeEnergy=true
     B:Forestry=true
     B:ForgeCraft=true
+    B:Foundry=true
     B:Furnace=true
     B:GadgetryCore=true
     B:GadgetryMachines=true
     B:ImmersiveEngineering=true
     B:IndustrialCraft2=true
+    B:IndustrialCraft2Classic=true
     B:IndustrialForegoing=true
     B:Magneticraft=true
     B:Mekanism=true
