--- a/config/v0idssmartbackpacks.cfg
+++ b/config/v0idssmartbackpacks.cfg
@@ -1,6 +1,21 @@
 # Configuration file
 
 general {
+    # Min: 0
+    # Max: 54
+    I:advancedBackpackInventorySize=54
+
+    # Min: 0
+    # Max: 14
+    I:advancedBackpackUpgradesSize=14
+
+    # Min: 0
+    # Max: 18
+    I:basicBackpackInventorySize=18
+
+    # Min: 0
+    # Max: 5
+    I:basicBackpackUpgradesSize=5
     B:dragonDropsScales=true
 
     # Min: 0
@@ -40,8 +55,24 @@ general {
     I:nuclearUpgradeFEPerTick=10
 
     # Min: 0
+    # Max: 36
+    I:reinforcedBackpackInventorySize=36
+
+    # Min: 0
+    # Max: 9
+    I:reinforcedBackpackUpgradesSize=9
+
+    # Min: 0
     # Max: 2147483647
     I:solarUpgradeFEPerTick=16
+
+    # Min: 0
+    # Max: 117
+    I:ultimateBackpackInventorySize=117
+
+    # Min: 0
+    # Max: 18
+    I:ultimateBackpackUpgradesSize=18
     B:useLightUI=false
 
     # Min: 0
