--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -313,6 +313,12 @@ crafting {
     B:mekanism.common.block.BlockSalt=true
     B:mod.flatcoloredblocks.block.BlockFlatColored=true
     B:mod.flatcoloredblocks.block.BlockFlatColoredTranslucent=true
+    B:mods.railcraft.common.blocks.aesthetics.brick.BlockBrick=true
+    B:mods.railcraft.common.blocks.aesthetics.concrete.BlockReinforcedConcrete=true
+    B:mods.railcraft.common.blocks.aesthetics.metals.BlockMetal=true
+    B:mods.railcraft.common.blocks.ore.BlockOreMagic=true
+    B:mods.railcraft.common.blocks.ore.BlockOreMetal=true
+    B:mods.railcraft.common.blocks.ore.BlockOreMetalPoor=true
     B:mrtjp.projectred.exploration.BlockDecorativeStone=true
     B:mrtjp.projectred.exploration.BlockOre=true
     B:"nc.block.BlockMeta$BlockCooler"=true
