--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -9,11 +9,7 @@
 materials {
     # Set to false to prevent Alumite from being loaded [default: true]
     B:"Enable material alumite"=true
-
-    # Set to false to prevent Amber from being loaded [default: true]
     B:"Enable material amber"=true
-
-    # Set to false to prevent Amethyst from being loaded [default: true]
     B:"Enable material amethyst"=true
 
     # Set to false to prevent Bloodwood from being loaded [default: true]
@@ -57,8 +53,6 @@ materials {
 
     # Set to false to prevent Lumium from being loaded [default: true]
     B:"Enable material lumium_plustic"=true
-
-    # Set to false to prevent Malachite from being loaded [default: true]
     B:"Enable material malachite_gem"=true
 
     # Set to false to prevent Manasteel from being loaded [default: true]
@@ -105,17 +99,16 @@ materials {
 
     # Set to false to prevent Signalum from being loaded [default: true]
     B:"Enable material signalum_plustic"=true
-
-    # Set to false to prevent Tanzanite from being loaded [default: true]
     B:"Enable material tanzanite"=true
 
     # Set to false to prevent Terrasteel from being loaded [default: true]
     B:"Enable material terrasteel"=true
 
+    # Set to false to prevent Thaumium from being loaded [default: true]
+    B:"Enable material thaumium"=true
+
     # Set to false to prevent TNT from being loaded [default: true]
     B:"Enable material tnt"=true
-
-    # Set to false to prevent Topaz from being loaded [default: true]
     B:"Enable material topaz"=true
 }
 
@@ -231,7 +224,7 @@ tweaks {
     # Otherwise: do *not* load the Botania module for PlusTiC, overriding other settings. [default: true]
     B:"Force out Natural Pledge TiC materials"=true
 
-    # Enter in the format "modid:name;meta" (leave meta blank to match any meta) [default: ]
+    # Enter in the format "modid:name;meta" (leave meta blank to match any meta) [default: [Ljava.lang.String;@b12085e]
     S:"Items that Endlectric will not drain from" <
      >
 
@@ -239,7 +232,7 @@ tweaks {
     I:"Modifier values for Botanical" <
      >
 
-    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [20|coal], [5|slime_ball], [10|saddle], [5|tconstruct:edible;1], [1|emerald], [3|melon]]
+    # Objects that the Trash modifier will generate; enter in the format "weight|modid:name;meta" (leave meta blank for zero metadata) [default: [Ljava.lang.String;@5a53baa5]
     S:"Trash generation" <
         20|coal
         5|slime_ball
