--- a/config/forestry/apiculture.cfg
+++ b/config/forestry/apiculture.cfg
@@ -37,7 +37,7 @@ beekeeping {
 
 
 species {
-    # Add species to blacklist identified by their uid, one per line. [default: ]
+    # Add species to blacklist identified by their uid, one per line. [default: [Ljava.lang.String;@44e9cc5f]
     S:blacklist <
      >
 }
