--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -554,11 +554,13 @@ baselining {
     I:"plustic:plustic.molten_refinedglowstone_0"=0
     I:"plustic:plustic.molten_refinedobsidian_0"=0
     I:"plustic:plustic.molten_terrasteel_0"=0
+    I:"plustic:plustic.molten_thaumium_0"=0
     I:"pneumaticcraft:fluid.etchacid_0"=0
     I:"pneumaticcraft:fluid.fuel_0"=0
     I:"pneumaticcraft:fluid.kerosene_0"=0
     I:"pneumaticcraft:fluid.lpg_0"=0
     I:"pneumaticcraft:fluid.plastic_0"=0
+    I:"railcraft:steam_7"=0
     I:"rockhounding_surface:fluid.acidic_water_0"=0
     I:"rockhounding_surface:fluid.aging_bath_0"=0
     I:"rockhounding_surface:fluid.casting_bath_0"=0
@@ -601,6 +603,9 @@ baselining {
     I:"tconstruct:molten_tin_0"=0
     I:"tconstruct:molten_zinc_0"=0
     I:"tconstruct:purpleslime_0"=0
+    I:"thaumcraft:flux_goo_7"=0
+    I:"thaumcraft:liquid_death_0"=0
+    I:"thaumcraft:purifying_fluid_0"=0
     I:"thermalfoundation:fluid_aerotheum_0"=0
     I:"thermalfoundation:fluid_crude_oil_0"=0
     I:"thermalfoundation:fluid_cryotheum_0"=0
@@ -2008,6 +2013,11 @@ fluids {
     S:fluid.fluoromethane.grammar=
     S:fluid.fluoromethane.instability.factor_accessibility=
     S:fluid.fluoromethane.instability.factor_flat=
+    S:fluid.flux_goo.cardrank=
+    S:fluid.flux_goo.grammar=
+    S:fluid.flux_goo.instability.factor_accessibility=
+    S:fluid.flux_goo.instability.factor_flat=
+    S:fluid.flux_goo.seabanned=
     S:fluid.for.honey.cardrank=
     S:fluid.for.honey.grammar=
     S:fluid.for.honey.instability.factor_accessibility=
@@ -2682,6 +2692,11 @@ fluids {
     S:fluid.lif.instability.factor_accessibility=
     S:fluid.lif.instability.factor_flat=
     S:fluid.lif.seabanned=
+    S:fluid.liquid_death.cardrank=
+    S:fluid.liquid_death.grammar=
+    S:fluid.liquid_death.instability.factor_accessibility=
+    S:fluid.liquid_death.instability.factor_flat=
+    S:fluid.liquid_death.seabanned=
     S:fluid.liquidhelium.cardrank=
     S:fluid.liquidhelium.grammar=
     S:fluid.liquidhelium.instability.factor_accessibility=
@@ -2962,6 +2977,11 @@ fluids {
     S:fluid.plustic.terrasteel.instability.factor_accessibility=
     S:fluid.plustic.terrasteel.instability.factor_flat=
     S:fluid.plustic.terrasteel.seabanned=
+    S:fluid.plustic.thaumium.cardrank=
+    S:fluid.plustic.thaumium.grammar=
+    S:fluid.plustic.thaumium.instability.factor_accessibility=
+    S:fluid.plustic.thaumium.instability.factor_flat=
+    S:fluid.plustic.thaumium.seabanned=
     S:fluid.plutonium.cardrank=
     S:fluid.plutonium.grammar=
     S:fluid.plutonium.instability.factor_accessibility=
@@ -3062,6 +3082,11 @@ fluids {
     S:fluid.preheated_water.instability.factor_accessibility=
     S:fluid.preheated_water.instability.factor_flat=
     S:fluid.preheated_water.seabanned=
+    S:fluid.purifying_fluid.cardrank=
+    S:fluid.purifying_fluid.grammar=
+    S:fluid.purifying_fluid.instability.factor_accessibility=
+    S:fluid.purifying_fluid.instability.factor_flat=
+    S:fluid.purifying_fluid.seabanned=
     S:fluid.pyrotheum.cardrank=
     S:fluid.pyrotheum.grammar=
     S:fluid.pyrotheum.instability.factor_accessibility=
